<resources>
    <string name="app_name">Status Saver</string>
    <string name="whatsapp_shortcut">WhatsApp Status Saver</string>
    <string name="adid">ca-app-pub-8139407675411195~6021252718</string>
    <string name="banner">ca-app-pub-8139407675411195/5277541901</string>
    <string name="banner_ad_id">ca-app-pub-8139407675411195/5277541901</string>
    <string name="interstitial">ca-app-pub-8139407675411195/4516599357</string>
    <string name="interstitial_ad_id">ca-app-pub-8139407675411195/4516599357</string>
    <string name="navigation_drawer_open">nav open</string>
    <string name="navigation_drawer_close">nav close</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="invite_body">View, download and share Instagram stories with this app!!</string>
    <string name="sub_title">For Whatsapp</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Error</string>
    <string name="no_images_saved">No images saved</string>
    <string name="no_images_recent">No recent status images found</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="msg_alert_delete_item_confirm">Item will be removed from saved list. Are you sure?</string>
    <string name="title_delete_confirm_dialog">Confirm</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_iv">Search IG username to display profile picture</string>
    <string name="no_profs">No profile pics saved yet</string>
    <string name="error_loading_instagram_log_in_page">Error loading Instagram Log in page</string>
    <string name="no_ig_ers_favorited_yet">No IG\'ers favorited yet</string>
    <string name="user_icon">user_icon</string>
    <string name="log_out">Log out</string>
    <string name="logout">Log out</string>
    <string name="sign_out_warning">Are you sure you want to Log out?</string>
    <string name="no_saved_stories_found">No saved stories found</string>
    <string name="tap_on_save_on_images_videos_to_save_them">Tap on save on Images/Videos to save them</string>
    <string name="error_loading_instagram_stories">Error loading Instagram stories</string>
    <string name="please_check_internet_connection_then_tap_refresh">Please check internet connection then tap refresh</string>
    <string name="error_loading_favorite_instagram_stories">Error loading favorite Instagram stories</string>
    <string name="tap_on_user_icon_in_stories_feed_to_set_favorites">Tap on user icon in stories feed to set favorites</string>
    <string name="refresh">Please check internet connection then refresh</string>
    <string name="no_fave_stories">No fave Instagram stories found</string>
    <string name="search_users">search users</string>
    <string name="no_search_history_found">No search history found</string>
    <string name="clear_history">Clear history</string>
    <string name="no_stories">No stories found</string>
    <string name="default_notification_channel_id">default_notif_channel</string>
    <string name="tap_on_search_icon_to_search_users">Tap on search icon to search users</string>
    <string name="video_to_gif">Video to GIF</string>
    <string name="images_to_gif">Images to GIF</string>
    <string name="video_to_audio">Video to Audio</string>
    <string name="capture_image">Capture Image</string>
    <string name="video_cutter">Video Cutter</string>
    <string name="gallery">Gallery</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading…</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="no_data_found">No Data Found</string>
    <string name="select_preset">Select Preset</string>
    <string name="select_quality">Select Quality</string>
    <string name="please_wait">Please wait…</string>
    <string name="ob_header1">All Social Media Download</string>
    <string name="ob_header2">Simple, Easy and Secure</string>
    <string name="ob_header3">Best Tools for Videos</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_desc1">Download Insta,FB,Twitter,TikTok Videos</string>
    <string name="ob_desc2">Easiest app to download videos ,Save Whatsapp Status and More</string>
    <string name="ob_desc3">Convert videos to gif,cut videos and more</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
