<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAdView"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_id"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.gms.ads.AdView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_above="@id/bannerAdView"
        android:layout_height="match_parent"
        android:clickable="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            app:elevation="0dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:layout_collapseMode="parallax"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoToGIF"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                app:tint="@color/colorAccent"
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_gif" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_to_gif"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardImagesToGIF"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:visibility="gone"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView

                                app:tint="@color/colorAccent"
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_images_gif" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/images_to_gif"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoCutter"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                app:tint="@color/colorAccent"
                                android:layout_width="60dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_cutter" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_cutter"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardVideoToAudio"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView

                                app:tint="@color/colorAccent"
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_video_audio" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/video_to_audio"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardCaptureImage"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                app:tint="@color/colorAccent"
                                android:layout_width="80dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_capture_image" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/capture_image"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearRow3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardGallery"
                            app:cardElevation="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            app:cardUseCompatPadding="true"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatImageView
                                app:tint="@color/colorAccent"
                                android:layout_width="50dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_gallery" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:padding="10dp"
                                android:text="@string/gallery"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>